// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client resources createClient should return a proper new instance of axios 1`] = `
{
  "adapter": [Function],
  "headers": {
    "X-CSRF-Token": "abcd",
    "X-Gorgias-User-Client": "web",
    "common": {
      "Accept": "application/json, text/plain, */*",
    },
    "delete": {},
    "get": {},
    "head": {},
    "patch": {
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "post": {
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "put": {
      "Content-Type": "application/x-www-form-urlencoded",
    },
  },
  "maxBodyLength": -1,
  "maxContentLength": -1,
  "timeout": 0,
  "transformRequest": [
    [Function],
  ],
  "transformResponse": [
    [Function],
  ],
  "validateStatus": [Function],
  "xsrfCookieName": "XSRF-TOKEN",
  "xsrfHeaderName": "X-XSRF-TOKEN",
}
`;

exports[`client resources handleNewRelease interceptor should notify and reload on new release 1`] = `
[
  [
    {
      "allowHTML": true,
      "buttons": [
        {
          "name": "Reload",
          "onClick": [Function],
          "primary": true,
        },
      ],
      "dismissAfter": 0,
      "dismissible": false,
      "message": "An update is available for Gorgias. The app will reload automatically.",
      "status": "warning",
    },
  ],
]
`;

exports[`client resources resources axios instance should resolve with data 1`] = `
{
  "config": {
    "data": undefined,
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "get",
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": {
    "data": {
      "foo_bar": 1,
    },
  },
  "headers": {
    "x-gorgias-release": "1",
  },
  "request": {
    "responseUrl": "/api",
  },
  "status": 200,
}
`;

exports[`client resources resources axios instance should send a request with data 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "data": "{"foo_bar":"foo","foo":[{"foo_bar":"foo"}]}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
}
`;
